[package]
name = "ya-runtime-sdk-derive"
description = "Macro implementation of #[derive(RuntimeDef)]"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://github.com/golemfactory/ya-runtime-sdk"
repository = "https://github.com/golemfactory/ya-runtime-sdk"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
