[package]
name = "ya-runtime-sdk"
description = "Facilitates creating new runtimes for Yagna"
version = "0.1.2"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://github.com/golemfactory/ya-runtime-sdk"
repository = "https://github.com/golemfactory/ya-runtime-sdk"

[features]
default = []
macros = ["ya-runtime-sdk-derive"]

[dependencies.ya-runtime-api]
version = "0.4"
features = ["codec"]

[dependencies.ya-runtime-sdk-derive]
version = "0.1"
path = "../ya-runtime-sdk-derive"
optional = true

[dependencies]
anyhow = "1.0"
directories = "3.0"
futures = "0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
tokio = { version = "0.2", features = ["blocking", "io-std", "io-util", "rt-core", "rt-threaded", "macros"] }
toml = "0.5"

[dev-dependencies]
tempdir = "0.3"
