[package]
name = "ya-runtime-sdk"
description = "Facilitates creation of new runtimes for Yagna"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://github.com/golemfactory/ya-runtime-sdk"
repository = "https://github.com/golemfactory/ya-runtime-sdk"
readme = "../README.md"

[features]
default = []
macros = ["ya-runtime-sdk-derive"]

[dependencies.ya-runtime-api]
# version = "0.5"
features = ["codec"]
git = "https://github.com/golemfactory/yagna"
rev = "b378af18e585c0d04616d1ea1878b62bc0909b84"


[dependencies.ya-runtime-sdk-derive]
version = "0.1"
path = "../ya-runtime-sdk-derive"
optional = true

[dependencies]
anyhow = "1.0"
directories = "3.0"
futures = "0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt"] }
toml = "0.5"

[dev-dependencies]
tempdir = "0.3"
