[package]
name = "ya-runtime-sdk"
description = "Facilitates creation of new runtimes for Yagna"
version = "0.4.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://github.com/golemfactory/ya-runtime-sdk"
repository = "https://github.com/golemfactory/ya-runtime-sdk"
readme = "../README.md"

[features]
default = []
logger = ["chrono", "flexi_logger", "log"]
macros = ["ya-runtime-sdk-derive"]

[dependencies.ya-runtime-api]
version = "0.6"
features = ["codec"]

[dependencies.ya-runtime-sdk-derive]
version = "0.1"
path = "../ya-runtime-sdk-derive"
optional = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", optional = true }
directories = "4"
futures = "0.3"
flexi_logger = { version = "0.24", features = ["colors"], optional = true }
log = { version = "0.4", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
structopt = "0.3"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt"] }
toml = "0.5"

[dev-dependencies]
tempdir = "0.3"
