[package]
name = "example-runtime"
version = "1.2.3"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
ya-runtime-sdk = { version = "0.2", path = "../../ya-runtime-sdk", features = ["macros"] }

anyhow = "1.0"
futures = "0.3"
serde = { version = "^1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1.17.0", features = ["process", "macros", "time", "rt-multi-thread"] }
